syntax = "proto3";

package chat;

service Chat {
  rpc Conn(ConnReq) returns (stream Msg);
  rpc PubMsg(PubMsgReq) returns (PubMsgRsp);
  rpc GroupAction(GroupActionReq) returns (GroupActionRsp);
}

message ConnReq {
  string token = 1;
}

message GroupActionReq {
  string gid = 1;
  string action = 2;
}

message GroupActionRsp { string gid = 1; }

message PubMsgReq { Msg msg = 1; }

message PubMsgRsp {}

message Msg {
  string msg_id = 1;
  string from_id = 2;
  string to_id = 3; // GROUP: gid, P2P: uid
  string content = 4;
}
